Bug 63880 - Fix up all documentation warnings and complete documentation
Summary: Fix up all documentation warnings and complete documentation
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-24 10:44 UTC by Stef Walter
Modified: 2013-05-11 19:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix up all documentation warnings and complete documentation (18.77 KB, patch)
2013-04-24 10:44 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2013-04-24 10:44:02 UTC
Some cleanup of the documentation building so it's easier ot see when
adding new stuff if things are undocumented
Comment 1 Stef Walter 2013-04-24 10:44:05 UTC
Created attachment 78423 [details] [review]
Fix up all documentation warnings and complete documentation
Comment 2 Stef Walter 2013-04-24 10:44:17 UTC
Some of the warnings fixed:

/usr/bin/xmlto  xhtml-nochunks -m ../../doc/dbus/config.xsl AccountsService.xml
make[3]: Leaving directory `/data/projects/accountsservice/doc/dbus'
Making all in libaccountsservice
make[3]: Entering directory `/data/projects/accountsservice/doc/libaccountsservice'
  DOC   Scanning header files
  DOC   Introspecting gobjects
  DOC   Building XML
./libaccountsservice.args:57: warning: Property ActUser:is-loaded has no documentation.
./libaccountsservice.args:217: warning: Property ActUserManager:exclude-usernames-list has no documentation.
./libaccountsservice.args:227: warning: Property ActUserManager:has-multiple-users has no documentation.
./libaccountsservice.args:237: warning: Property ActUserManager:include-usernames-list has no documentation.
./libaccountsservice.args:247: warning: Property ActUserManager:is-loaded has no documentation.
../../src/libaccountsservice/ck-seat-generated.c:162: warning: Section ConsoleKitSeat is not defined in the libaccountsservice-section.txt file.
../../src/libaccountsservice/accounts-user-generated.c:162: warning: Section AccountsUser is not defined in the libaccountsservice-section.txt file.
../../src/libaccountsservice/ck-session-generated.c:162: warning: Section ConsoleKitSession is not defined in the libaccountsservice-section.txt file.
../../src/libaccountsservice/accounts-generated.c:162: warning: Section AccountsAccounts is not defined in the libaccountsservice-section.txt file.
../../src/libaccountsservice/ck-manager-generated.c:162: warning: Section ConsoleKitManager is not defined in the libaccountsservice-section.txt file.
:0: warning: Value descriptions for ActUserAccountType are missing in source code comment block.
:0: warning: Value descriptions for ActUserPasswordMode are missing in source code comment block.
../../src/libaccountsservice/act-user.c:1785: warning: Parameter description for act_user_set_automatic_login::user is missing in source code comment block.
:0: warning: Value descriptions for ActUserManagerError are missing in source code comment block.
../../src/libaccountsservice/act-user-manager.c:2996: warning: Parameter description for act_user_manager_cache_user_async::user_data is missing in source code comment block.
../../src/libaccountsservice/act-user-manager.c:2857: warning: Parameter description for act_user_manager_create_user_async::user_data is missing in source code comment block.
../../src/libaccountsservice/act-user-manager.c:3162: warning: Parameter description for act_user_manager_delete_user_async::user_data is missing in source code comment block.
  DOC   Building HTML
../xml/act-user-manager.xml:137: element refsect2: validity error : ID ActUserManager already defined
<refsect2 id="ActUserManager" role="typedef">
                                            ^

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer full) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (allow-none) no value found!
        

          In gtk-doc.xsl: For acronym (scope async) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer full) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer full) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (allow-none) no value found!
        

          In gtk-doc.xsl: For acronym (scope async) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer full) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (allow-none) no value found!
        

          In gtk-doc.xsl: For acronym (scope async) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (transfer none) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.

          In gtk-doc.xsl: For acronym (element-type) no value found!
        

          In gtk-doc.xsl: For acronym (transfer container) no value found!
        
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
Warning: multiple "IDs" for constraint linkend: ActUserManager.
  DOC   Fixing cross-references
Comment 3 Matthias Clasen 2013-05-11 19:18:00 UTC
Attachment 78423 [details] pushed as b6de2df - Fix up all documentation warnings and complete documentation


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.