Fix up all documentation warnings and complete documentation

https://bugs.freedesktop.org/show_bug.cgi?id=63880